# linksaas

./: .gitignore  .linksaas.yml  .prettierrc.js  CHANGELOG.md  README.md  README_ZH.md  about.html  api_custom.html  api_grpc.html  api_swagger.html  book.html  cicd.html  data_anno.html  devc.html  float_notice.html  git_diff.html  gitpro.html  index.html  index.yml  index_0.0.1.yml  index_0.0.2.yml  index_0.0.3.yml  k8swin.html  local_api.html  openapitools.json  package.json  search_result.html  short_note.html  swarmwin.html  tsconfig.json  vc.html  vite.config.ts
.cargo/: config
ai-proto/: .boatsrc  index.yml  package.json
ai-proto/src/: index.yml.njk
ai-proto/src/parameters/: destLang.yml.njk
ai-proto/src/schemas/: errInfo.yml.njk  lang.yml.njk
config/: constant.ts
config/theme/: index.ts  variables.less
config/vite/plugins/: index.ts  legacy.ts  visualizer.ts  vitePluginImp.ts
dist-isolation/: index.html
public/static/css/: labelstudio.css
public/static/js/: labelstudio.js
src/: main.tsx  styles.d.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin_auth_api_plugin.rs  admin_docker_template_api_plugin.rs  api_collection_api_plugin.rs  appstore_admin_api_plugin.rs  appstore_api_plugin.rs  bookstore_admin_api_plugin.rs  bookstore_api_plugin.rs  cicd_runner_api_plugin.rs  client_cfg_admin_api_plugin.rs  client_cfg_api_plugin.rs  data_anno_project_api_plugin.rs  data_anno_task_api_plugin.rs  dev_container_admin_api_plugin.rs  dev_container_api_plugin.rs  docker_template_admin_api_plugin.rs  docker_template_api_plugin.rs  events_admin_api_plugin.rs  events_api_plugin.rs  events_decode.rs  events_subscribe_api_plugin.rs  external_events_api_plugin.rs  fs_api_plugin.rs  group_admin_api_plugin.rs  group_api_plugin.rs  group_member_api_plugin.rs  group_post_admin_api_plugin.rs  group_post_api_plugin.rs  http_custom_api_plugin.rs  image_utils.rs  k8s_proxy_api_plugin.rs  link_aux_api_plugin.rs  local_repo_plugin.rs  main.rs  min_app_fs_plugin.rs  min_app_plugin.rs  min_app_shell_plugin.rs  min_app_store_plugin.rs  my_updater.rs  net_proxy_api_plugin.rs  notice_decode.rs  (+50 more)
src-tauri/src/helper/: http.rs
src-tauri/src/local_api/: access_check.rs  bookmark_api.rs  channel_api.rs  doc_space_api.rs  entry_api.rs  event_api.rs  issue_api.rs  member_api.rs  mod.rs  notice.rs  project_api.rs  project_code_api.rs  server.rs  testcase_api.rs  vc_api.rs
src/api/: admin_auth.ts  ai.ts  api_collection.ts  appstore.ts  appstore_admin.ts  bookstore.ts  bookstore_admin.ts  cicd_runner.ts  client_cfg.ts  client_cfg_admin.ts  data_anno_project.ts  data_anno_task.ts  dev_container.ts  dev_container_admin.ts  docker_template.ts  docker_template_admin.ts  event_type.ts  events.ts  events_admin.ts  events_subscribe.ts  external_events.ts  fs.ts  group.ts  group_admin.ts  group_member.ts  group_post.ts  group_post_admin.ts  http_custom.ts  k8s_proxy.ts  link_aux.ts  local_api.ts  local_repo.ts  main.ts  min_app.ts  min_app_store.ts  net_proxy.ts  notice_type.ts  org_admin.ts  pages.ts  project.ts  (+49 more)
src/api/events/: api_collection.ts  atomgit.ts  book_shelf.ts  cicd.ts  code.ts  data_anno.ts  earthly.ts  entry.ts  ext_event.ts  gitee.ts  gitlab.ts  gogs.ts  harbor.ts  idea.ts  issue.ts  project.ts  project_doc.ts  requirement.ts  robot.ts  script.ts  sprit.ts  test_case.ts
src/components/ActionModal/: index.module.less  index.tsx
src/components/AsyncImage/: index.tsx
src/components/BottomNav/: AlarmHeader.tsx  CommentAndWatchPanel.tsx  MemberList.tsx  ProjectFsList.tsx  index.module.less  index.tsx
src/components/BugLevelSelect/: index.tsx
src/components/BugPrioritySelect/: index.tsx
src/components/Button/: index.tsx
src/components/CardWrap/: index.module.less  index.tsx
src/components/CommentEntry/: CommentItem.tsx  CommentModal.tsx  index.tsx
src/components/DetailsNav/: index.module.less  index.tsx
src/components/DocMenu/: index.module.less  index.tsx
src/components/EditCell/: EditDate.tsx  EditNumber.tsx  EditSelect.tsx  EditTag.tsx  EditText.tsx  EditTextArea.tsx
src/components/Editor/: CommonEditor.tsx  ReadOnlyEditor.tsx  SimpleEditor.tsx  common.tsx  editor.less  extensions.ts  index.tsx  utils.ts
src/components/ErrorBoundary/: index.tsx
src/components/EventCom/: index.tsx
src/components/Filtration/: index.module.less  index.tsx
src/components/Fs/: FsFile.tsx  FsImage.tsx
src/components/GlobalSetting/: GlobalServerModal.tsx
src/components/Header/: Header.tsx  Logo.tsx  ProjectQuickAccess.tsx  ProjectTip.tsx  ProjectTipList.module.less  ProjectTipList.tsx  ProjectUseTip.tsx  index.module.less
src/components/InputNumber/: index.tsx
src/components/JobNav/: index.module.less  index.tsx
src/components/KnowledgeBaseMenu/: index.module.less  index.tsx
src/components/LeftMenu/: AddMember.tsx  CreatedOrJoinProject.tsx  CreatedProject.tsx  PrjTodoIssueList.tsx  ProjectItem.tsx  ProjectList.tsx  ProjectWatch.module.less  ProjectWatch.tsx  index.module.less  index.tsx  prjIssue.module.less
src/components/MemberSelect/: index.tsx
src/components/Menu/: CreatedProject.tsx  index.tsx  (+3 more)
src/config/: form.ts
src/hooks/: index.ts  useVisible.ts
src/layouts/: AdminLayout.tsx  Authority.tsx  BasicLayout.tsx  ChatLayout.tsx  DocLayout.tsx  GroupLayout.tsx  HomeLayout.tsx  KnowledgeBaseLayout.tsx  MyWorkLayout.tsx  OverviewLayout.tsx  ProjectLayout.tsx  UserLayout.tsx  WorkPlanLayout.tsx  style.module.less
src/parameters/: authToken.yml.njk  lang.yml.njk
src/routes/: index.tsx
src/schemas/: errInfo.yml.njk
src/stores/: app.ts  appraise.ts  board.ts  bookShelf.ts  channel.ts  channelMember.ts  chatMsg.ts  cloud.ts  doc.ts  docSpace.ts  editor.ts  entry.ts  group.ts  idea.ts  index.ts  issue.ts  linkAux.ts  member.ts  notice.ts  project.ts  project_chat.ts  pubRes.ts  sprit.ts  user.ts
src/styles/: global.less  reset.less
src/utils/: constant.ts  file_type.ts  float_notice.ts  mermaid.ts  request.ts  short_note.ts  time.ts  utils.ts
typings/: module.d.ts
(+868 files in other folders)
